<resources>
    <string name="app_name">Soccer Score</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
        <string name="goals0">0</string>
    <string name="goal">GOAL!</string>
    <string name="vs">VS.</string>
    <string name="penalty">PENALTY!</string>
    <string name="yellow">Yellow Cards</string>
    <string name="red">Red Cards</string>
    <string name="reset">Reset</string>

</resources>
