<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounterapp.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/soccerfieldportrait"
        android:scaleType="fitXY"
        android:alpha="0.8"
         />

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/score_team_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals0"
            android:textSize="80sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:text="@string/vs"
            android:textSize="42sp"
            android:textColor="#000000"/>


        <TextView
            android:id="@+id/score_team_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:text="@string/goals0"
            android:textSize="80sp"
            android:textStyle="bold"
            android:textColor="#000000"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold|italic"
                android:text="@string/teamA"
                android:textSize="36sp"
                android:textColor="#263238"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00E676"
                        android:minHeight="0dp"
                        android:onClick="goals_team_A"
                        android:text="@string/goal"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/goals_team_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00E5FF"
                        android:minHeight="0dp"
                        android:onClick="penalty_team_A"
                        android:text="@string/penalty"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/penalty_team_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFFF00"
                        android:minHeight="0dp"
                        android:onClick="yellow_A"
                        android:text="@string/yellow"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/yellow_team_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>


                </TableRow>

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#F44336"
                        android:minHeight="0dp"
                        android:onClick="red_A"
                        android:text="@string/red"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/red_team_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>


                </TableRow>


            </TableLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold|italic"
                android:text="@string/teamB"
                android:textSize="36sp"
                android:textColor="#263238"
                />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00E676"
                        android:minHeight="0dp"
                        android:onClick="goals_team_B"
                        android:text="@string/goal"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/goals_team_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00E5FF"
                        android:minHeight="0dp"
                        android:onClick="penalty_team_B"
                        android:text="@string/penalty"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/penalty_team_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FFFF00"
                        android:minHeight="0dp"
                        android:onClick="yellow_B"
                        android:text="@string/yellow"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/yellow_team_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>


                </TableRow>

                <TableRow>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#F44336"
                        android:minHeight="0dp"
                        android:onClick="red_B"
                        android:text="@string/red"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/red_team_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:text="@string/goals0"
                        android:textSize="24sp"
                        android:textColor="#263238"
                        android:textStyle="bold"/>


                </TableRow>


            </TableLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="#37474F"
        android:onClick="resetScore"
        android:text="@string/reset" />


</RelativeLayout>